--- a/themes/dream/layouts/_default/single.html
+++ b/themes/dream/layouts/_default/single.html
@@ -84,7 +84,7 @@
           </figure>
         {{ end }}
 
-        {{ with .Params.audio }}
+        {{ with .Params.postAudio }}
         <div class="audio-player my-4 p-4 rounded-lg bg-base-200/50">
           <div class="flex items-center gap-2 mb-2">
             <ion-icon name="headset-outline" class="text-lg"></ion-icon>
