feat: 实现多语言支持和国际化配置
重构项目支持多语言，添加中文和英文内容，优化工作流和配置
- 添加多语言i18n文件，支持中英文切换
- 重构hugo.toml配置支持多语言站点
- 添加中英文双语内容，包括关于页面和日记文章
- 优化GitHub工作流处理多语言内容
- 更新.gitignore排除生成文件

--- a/themes/dream/layouts/partials/nav.html
+++ b/themes/dream/layouts/partials/nav.html
@@ -43,6 +43,18 @@
       </div>
       <ul tabindex="0" class="dropdown-content menu w-36 bg-base-100 rounded-box z-1 shadow-md">
         {{ partial "navMobileMenu.html" (dict "navItems" $navItems) }}
+        {{ if gt (len site.Languages) 1 }}
+        {{ range site.Sites }}
+        {{ if ne .Language.Lang $.Language.Lang }}
+        <li>
+          <a class="inline-flex items-center p-2 cursor-pointer" href="{{ .Home.RelPermalink }}" title="{{ .Language.LanguageName }}">
+            <ion-icon name="language"></ion-icon>
+            {{ .Language.LanguageName }}
+          </a>
+        </li>
+        {{ end }}
+        {{ end }}
+        {{ end }}
       </ul>
     </div>
     <section class="hidden sm:flex sm:items-center sm:gap-2 md:gap-4">
@@ -78,6 +90,16 @@
           {{ end }}
         </ul>
       </div>
+      {{ end }}
+
+      {{ if gt (len site.Languages) 1 }}
+      {{ range site.Sites }}
+      {{ if ne .Language.Lang $.Language.Lang }}
+      <a class="group inline-flex items-center p-2 rounded-full cursor-pointer hover:bg-primary" href="{{ .Home.RelPermalink }}" title="{{ .Language.LanguageName }}">
+        <ion-icon class="group-hover:text-primary-content" name="language"></ion-icon>
+      </a>
+      {{ end }}
+      {{ end }}
       {{ end }}
     </section>
   </div>
