--- a/themes/dream/layouts/_default/single.html
+++ b/themes/dream/layouts/_default/single.html
@@ -1,14 +1,10 @@
-{{ define "title" }}{{ .Title }}{{ end }}
-
-{{ define "css" }}
-
-{{ if site.Params.customSyntaxHighlighting }}
+{{ define "title" }}{{ .Title }}{{ end }} {{ define "css" }} {{ if site.Params.customSyntaxHighlighting }}
 <link rel="stylesheet" data-custom-syntax-highlighting />
 <style>
   .chroma {
     padding: 1em;
     background-color: var(--dream-pre-bg, #f5f5f5);
-    border-radius: .5em;
+    border-radius: 0.5em;
     overflow: auto;
   }
 
@@ -23,85 +19,67 @@
     overflow: auto;
   }
 </style>
-{{ end }}
-
-{{ partialCached "commentSystemHeads.html" . }}
-
-{{ end }}
-
-{{ define "main" }}
+{{ end }} {{ partialCached "commentSystemHeads.html" . }} {{ end }} {{ define "main" }}
 <div class="lg:grid lg:grid-cols-4 gap-4 mt-4 px-4">
   <div class="hidden lg:block">
     {{ if fileExists "layouts/partials/adsense.html" }}
-      <div class="dream-adsense w-2/3">
-        {{ partialCached "adsense.html" . }}
-      </div>
+    <div class="dream-adsense w-2/3">{{ partialCached "adsense.html" . }}</div>
     {{ end }}
   </div>
 
   <div class="lg:col-span-2">
-    <article class="mx-auto prose prose-quoteless dark:prose-invert" id="dream-single-post-main" itemscope itemtype="http://schema.org/Article">
+    <article
+      class="mx-auto prose prose-quoteless dark:prose-invert"
+      id="dream-single-post-main"
+      itemscope
+      itemtype="http://schema.org/Article"
+    >
       {{ template "_internal/schema.html" . }}
 
       <header>
         <h1 itemprop="headline">{{ .Title }}</h1>
         <p class="text-sm">
           {{ if site.Params.Experimental.jsDate }}
-            <span data-format="luxon">{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}</span>
-          {{ else }}
-            {{ .Date | time.Format "Monday, Jan 2, 2006" }}
-          {{ end }}
+          <span data-format="luxon">{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}</span>
+          {{ else }} {{ .Date | time.Format "Monday, Jan 2, 2006" }} {{ end }} |
+          <span>{{ .ReadingTime }}{{ T "minuteRead" .ReadingTime }}</span>
 
-          | <span>{{ .ReadingTime }}{{ T "minuteRead" .ReadingTime }}</span>
-
-          {{ if ne .Params.nolastmod true }}
-          | <span>{{ T "updatedAt" }}
-            {{ if site.Params.Experimental.jsDate }}
-              <span data-format="luxon">{{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" }}</span>
-            {{ else }}
-              {{ .Lastmod | time.Format "Monday, Jan 2, 2006" }}
-            {{ end }}</span>
+          {{ if ne .Params.nolastmod true }} |
+          <span
+            >{{ T "updatedAt" }} {{ if site.Params.Experimental.jsDate }}
+            <span data-format="luxon">{{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" }}</span>
+            {{ else }} {{ .Lastmod | time.Format "Monday, Jan 2, 2006" }} {{ end }}</span
+          >
           {{ end }}
         </p>
 
         {{ $hasAuthor := or .Params.author site.Params.author }}
         <div class="flex justify-between">
-          {{ if $hasAuthor }}
-            {{ partial "author.html" (dict "Params" .Params "template" "single") }}
-          {{ end }}
-
-          {{ partial "share.html" . }}
+          {{ if $hasAuthor }} {{ partial "author.html" (dict "Params" .Params "template" "single") }} {{ end }} {{
+          partial "share.html" . }}
         </div>
       </header>
 
       <section id="dream-single-post-content" itemprop="articleBody">
         {{ if and .Params.Cover site.Params.showSummaryCoverInPost }}
-          <figure>
-            <img class="z-30" src="{{ .Params.Cover }}" alt="{{ .Title }}" />
-            {{ with .Params.covercaption }}
-              <figcaption class="text-sm italic text-center mt-2">{{ . }}</figcaption>
-            {{ end }}
-          </figure>
-        {{ end }}
-
-        {{ with .Params.postAudio }}
+        <figure>
+          <img class="z-30" src="{{ .Params.Cover }}" alt="{{ .Title }}" />
+          {{ with .Params.covercaption }}
+          <figcaption class="text-sm italic text-center mt-2">{{ . }}</figcaption>
+          {{ end }}
+        </figure>
+        {{ end }} {{ with .Params.postAudio }}
         <div class="audio-player my-4 p-4 rounded-lg bg-base-200/50">
           <div class="flex items-center gap-2 mb-2">
             <ion-icon name="headset-outline" class="text-lg"></ion-icon>
-            <span class="text-sm font-medium">🔊 听这篇日记</span>
+            <span class="text-sm font-medium">{{ T "listenDiary" }}</span>
           </div>
-          <audio controls preload="metadata" class="w-full" style="height: 40px;">
-            <source src="{{ . }}" type="audio/mpeg">
+          <audio controls preload="metadata" class="w-full" style="height: 40px">
+            <source src="{{ . }}" type="audio/mpeg" />
           </audio>
         </div>
-        {{ end }}
-
-        {{ .Content | emojify }}
-
-        {{ if fileExists "layouts/partials/adsense-post-bottom.html" }}
-          <div class="dream-adsense-post-bottom">
-            {{ partialCached "adsense-post-bottom.html" . }}
-          </div>
+        {{ end }} {{ .Content | emojify }} {{ if fileExists "layouts/partials/adsense-post-bottom.html" }}
+        <div class="dream-adsense-post-bottom">{{ partialCached "adsense-post-bottom.html" . }}</div>
         {{ end }}
       </section>
 
@@ -118,9 +96,7 @@
         </a>
         {{ else }}
         <div></div>
-        {{ end }}
-
-        {{ with .PrevInSection }}
+        {{ end }} {{ with .PrevInSection }}
         <a role="button" class="btn btn-outline h-12" href="{{ .RelPermalink }}" title="{{ .Title }}">
           <div class="inline-flex flex-col items-end">
             <span class="text-base-content/60 text-xs font-normal">{{ T "nextPage" }}</span>
@@ -132,79 +108,48 @@
         <div></div>
         {{ end }}
       </div>
-      {{ end }}
-
-      {{ if or site.Config.Services.Disqus.Shortname site.Params.utterancesRepo site.Params.valine site.Params.waline site.Params.twikoo.enabled }}
+      {{ end }} {{ if or site.Config.Services.Disqus.Shortname site.Params.utterancesRepo site.Params.valine
+      site.Params.waline site.Params.twikoo.enabled }}
       <div class="divider"></div>
 
-      <section class="space-y-4">
-        {{ partialCached "commentSystems.html" . .RelPermalink }}
-      </section>
+      <section class="space-y-4">{{ partialCached "commentSystems.html" . .RelPermalink }}</section>
       {{ end }}
     </article>
   </div>
 
-  <div
-    x-data="tocHighlighter()"
-    @scroll.window="debouncedScroll"
-    class="hidden lg:flex lg:flex-col lg:items-end"
-  >
-    {{ if site.Params.showTableOfContents }}
-      {{ .TableOfContents }}
-    {{ end }}
+  <div x-data="tocHighlighter()" @scroll.window="debouncedScroll" class="hidden lg:flex lg:flex-col lg:items-end">
+    {{ if site.Params.showTableOfContents }} {{ .TableOfContents }} {{ end }}
   </div>
 </div>
-{{ end }}
+{{ end }} {{ define "js" }} {{ if site.Params.Experimental.jsDate }} {{ partial "luxon.html" . }} {{ end }} {{ if
+site.Params.customSyntaxHighlighting }} {{- $syntaxLightCSS := resources.Get "css/syntax-light.css" | minify -}} {{-
+$syntaxDarkCSS := resources.Get "css/syntax-dark.css" | minify -}}
 
-{{ define "js" }}
+<script>
+  window.customSyntaxHighlighting = {
+    light: {{ $syntaxLightCSS.RelPermalink }},
+    dark: {{ $syntaxDarkCSS.RelPermalink }}
+  }
 
-{{ if site.Params.Experimental.jsDate }}
-  {{ partial "luxon.html" . }}
-{{ end }}
+  document.addEventListener('alpine:initialized', () => {
+    var isDark = Alpine.store('darkMode').isDark()
+    var customSyntaxHighlightingUrl = isDark ? window.customSyntaxHighlighting.dark : window.customSyntaxHighlighting.light
 
-{{ if site.Params.customSyntaxHighlighting }}
-  {{- $syntaxLightCSS := resources.Get "css/syntax-light.css" | minify -}}
-  {{- $syntaxDarkCSS := resources.Get "css/syntax-dark.css" | minify -}}
-
-  <script>
-    window.customSyntaxHighlighting = {
-      light: {{ $syntaxLightCSS.RelPermalink }},
-      dark: {{ $syntaxDarkCSS.RelPermalink }}
-    }
-
-    document.addEventListener('alpine:initialized', () => {
-      var isDark = Alpine.store('darkMode').isDark()
-      var customSyntaxHighlightingUrl = isDark ? window.customSyntaxHighlighting.dark : window.customSyntaxHighlighting.light
-
-      document
-        .querySelector('link[data-custom-syntax-highlighting]')
-        .setAttribute('href', customSyntaxHighlightingUrl)
-    })
-  </script>
-{{ end }}
-
-{{ $tocJs := resources.Get "js/toc.js" }}
-{{ if hugo.IsProduction }}
-  {{ $tocJs = $tocJs | minify }}
-{{ end }}
+    document
+      .querySelector('link[data-custom-syntax-highlighting]')
+      .setAttribute('href', customSyntaxHighlightingUrl)
+  })
+</script>
+{{ end }} {{ $tocJs := resources.Get "js/toc.js" }} {{ if hugo.IsProduction }} {{ $tocJs = $tocJs | minify }} {{ end }}
 <script src="{{ $tocJs.RelPermalink }}"></script>
 
-{{ if site.Params.imageZoomableInPost }}
-  {{ if fileExists "layouts/partials/medium-zoom.html" }}
-    {{ partialCached "medium-zoom.html" . }}
-  {{ else }}
-    <script type="module">
-      import mediumZoom from 'https://cdn.jsdelivr.net/npm/medium-zoom@1.1.0/+esm';
-      mediumZoom('#dream-single-post-content img', {
-        background: 'oklch(var(--b1))',
-        margin: 24,
-      })
-    </script>
-  {{ end }}
-{{ end }}
-
-{{ if .Params.math }}
-  {{ .Page.Store.Set "hasMathjax" true }}
-{{ end }}
-
-{{ end }}
+{{ if site.Params.imageZoomableInPost }} {{ if fileExists "layouts/partials/medium-zoom.html" }} {{ partialCached
+"medium-zoom.html" . }} {{ else }}
+<script type="module">
+  import mediumZoom from 'https://cdn.jsdelivr.net/npm/medium-zoom@1.1.0/+esm'
+  mediumZoom('#dream-single-post-content img', {
+    background: 'oklch(var(--b1))',
+    margin: 24,
+  })
+</script>
+{{ end }} {{ end }} {{ if .Params.math }} {{ .Page.Store.Set "hasMathjax" true }} {{ end }} {{ end }}
